[tool.poetry]
name = "mlops-for-mle"
version = "0.1.0"
description = "mlops for machine learning engineer"
authors = ["Minki Kim <mingi3314@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
sqlalchemy = "^1.4.45"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
polars = "^0.15.9"
pyarrow = "^10.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "0.0.203"
black = "22.12.0"
isort = "5.11.4"
mypy = "0.991"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line-length = 100
experimental-string-processing = true

[tool.mypy]
python_version = "3.10" 
ignore_missing_imports = true 
disallow_any_generics = true 
disallow_untyped_calls= true 
disallow_untyped_defs= true 
disallow_incomplete_defs = true 
check_untyped_defs = true 
strict_optional = false 
warn_redundant_casts = true 
warn_unused_ignores = true 
allow_redefinition = true 
show_column_numbers = true 
pretty = true 